--- a/index.html
+++ b/index.html
@@ -51,14 +51,29 @@
 									Create Visual takes you on a visual journey into Iceland 
 									subculture. The videos found on this website are free and 
 									include various individuals and activities related to the 
-									subculture of Iceland. Create Video Calendar hosts a list 
-									of shows released by Create Visual. Additional material 
-									released by Create Visual is found in Create Visual 
-									Magazine and on Tumblr.<br />
+									subculture of Iceland. Additional material released by 
+									Create Visual is found in Create Visual Magazine, Facebook
+									and on Tumblr.
 									Enjoy!
 								</p>
 							</div>
 						</div>
+						<div id="sponsorBox">
+							<h2>First, our sponsors</h2>
+							<div class="sContainer">
+								<img src="img/sponsor1.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor2.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor3.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor4.png" />
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</section>
@@ -80,7 +95,50 @@
 						>
 							<h2></h2>
 						</div>
+						<div id="vidBox">
+							<h2>Create Video Calendar</h2>
+							<div class="vContainer">
+								<img src="img/vidCal/moment_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/Vision_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/redux_ep1.png" />
+							</div>
+							<div class="vContainer n07">
+								<img src="img/vidCal/piece_ep1.png" />
+							</div>
+							<!-- -->
+							<div class="vContainer">
+								<img src="img/vidCal/instorage_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/happy_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/dingdong_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/Echo_ep1.png" />
+							</div>
+							<!-- -->
+							<div class="vContainer">
+								<img src="img/vidCal/local_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/venture_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/aftermath_ep1.png" />
+							</div>
+							<div class="vContainer">
+								<img src="img/vidCal/green_ep1.png" />
+							</div>
+
+						</div>
 					</div>
+
 				</div>
 			</section>
 
