Hærri bg myndir + CSS

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									subculture. The videos found on this website are free and 
 									include various individuals and activities related to the 
 									subculture of Iceland. Additional material released by 
-									Create Visual is found in Create Visual Magazine, Facebook
+									Create Visual is found in Create Magazine, Facebook
 									and on Tumblr.
 									Enjoy!
 								</p>
