--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<section id="slide-2" class="homeSlide">
 				<div class="bcg"
 					data-center="background-position: 50% 0px;"
-					data-top-bottom="background-position: 50% -100px;"
+					data-top-bottom="background-position: 50% -100;"
 					data-bottom-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-2"
 				>
