--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<div class="vContainer">
 								<img src="img/vidCal/redux_ep1.png" />
 							</div>
-							<div class="vContainer n07">
+							<div class="vContainer">
 								<img src="img/vidCal/piece_ep1.png" />
 							</div>
 							<!-- -->
@@ -113,25 +113,32 @@
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/happy_ep1.png" />
+								<div class="n n11"></div>
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/dingdong_ep1.png" />
+								<div class="n n14"></div>
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/Echo_ep1.png" />
+								<div class="n n16"></div>
 							</div>
 							<!-- -->
 							<div class="vContainer">
 								<img src="img/vidCal/local_ep1.png" />
+								<div class="n n18"></div>
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/venture_ep1.png" />
+								<div class="n n21"></div>
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/aftermath_ep1.png" />
+								<div class="n n23"></div>
 							</div>
 							<div class="vContainer">
 								<img src="img/vidCal/green_ep1.png" />
+								<div class="n n25"></div>
 							</div>
 
 						</div>
