--- a/index.html
+++ b/index.html
@@ -96,49 +96,122 @@
 						<div id="vidBox">
 							<h2>Create Video Calendar</h2>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/moment" target="_blank" class="masterTooltip" title="Moment <br /> Moment by definition is a very brief period of time."><img src="img/vidCal/moment_ep1.png" /></a>
+								<a href="http://vimeopro.com/createvisual/moment" target="_blank">
+									<div class="vOverlay">
+										<h3>Moment</h3>
+										<p>Moment by definition is a very brief period of time</p>
+									</div>
+
+									<img src="img/vidCal/moment_ep1.png" />
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/Vision_ep1.png" />
+								<a href="http://vimeopro.com/createvisual/vision" target="_blank">
+									<div class="vOverlay">
+										<h3>Vision</h3>
+										<p>Artists performing in their studios</p>
+									</div>
+									<img src="img/vidCal/Vision_ep1.png" />
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/redux_ep1.png" />
+								<a href="http://vimeopro.com/createvisual/redux" target="_blank">
+									<div class="vOverlay">
+										<h3>Redux</h3>
+										<p>Redux will rerelease old icelandic skate video classics</p>
+									</div>
+									<img src="img/vidCal/redux_ep1.png" />
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/piece_ep1.png" />
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/piece_ep1.png" />
+								</a>
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<img src="img/vidCal/instorage_ep1.png" class="masterTooltip" title="Happy <br /> asdasd" />
-							</div>
-							<div class="vContainer masterTooltip" title="Happy">
-								<img src="img/vidCal/happy_ep1.png" />
-								<div class="n n11"></div>
-							</div>
-							<div class="vContainer">
-								<img src="img/vidCal/dingdong_ep1.png" />
-								<div class="n n14"></div>
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>In storage</h3>
+										<p>Unreleased footage now available</p>
+									</div>
+									<img src="img/vidCal/instorage_ep1.png" />
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/Echo_ep1.png" />
-								<div class="n n16"></div>
+								<a href="">
+									<div class="vOverlay">
+										<h3>Happy festival</h3>
+										<p>An illegal four day festival<br />Episode 1 release date july 11</p>
+									</div>
+									<img src="img/vidCal/happy_ep1.png" />
+									<div class="n n11"></div>
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/dingdong_ep1.png" />
+									<div class="n n14"></div>
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/Echo_ep1.png" />
+									<div class="n n16"></div>
+								</a>
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<img src="img/vidCal/local_ep1.png" />
-								<div class="n n18"></div>
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/local_ep1.png" />
+									<div class="n n18"></div>
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/venture_ep1.png" />
-								<div class="n n21"></div>
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/venture_ep1.png" />
+									<div class="n n21"></div>
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/aftermath_ep1.png" />
-								<div class="n n23"></div>
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/aftermath_ep1.png" />
+									<div class="n n23"></div>
+								</a>
 							</div>
 							<div class="vContainer">
-								<img src="img/vidCal/green_ep1.png" />
-								<div class="n n25"></div>
+								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/vidCal/green_ep1.png" />
+									<div class="n n25"></div>
+								</a>
 							</div>
 
 						</div>
@@ -176,28 +249,5 @@
         <script src="js/skrollr.js"></script>
         <script src="js/main.js"></script>
 
-		<script type="text/javascript">
-			$(document).ready(function() {
-			// Tooltip only Text
-			$('.masterTooltip').hover(function(){
-					// Hover over code
-					var title = $(this).attr('title');
-					$(this).data('tipText', title).removeAttr('title');
-					$('<p class="tooltip"></p>')
-					.html(title)
-					.appendTo('body')
-					.fadeIn('slow');
-			}, function() {
-					// Hover out code
-					$(this).attr('title', $(this).data('tipText'));
-					$('.tooltip').remove();
-			}).mousemove(function(e) {
-					var mousex = e.pageX + 20; //Get X coordinates
-					var mousey = e.pageY + 10; //Get Y coordinates
-					$('.tooltip')
-					.css({ top: mousey, left: mousex })
-			});
-			});
-		</script>
-    </body>
+	</body>
 </html>
