--- a/index.html
+++ b/index.html
@@ -57,21 +57,6 @@
 								</p>
 							</div>
 						</div>
-						<div id="sponsorBox">
-							<h2>First, our sponsors</h2>
-							<div class="sContainer">
-								<img src="img/sponsor1.png" />
-							</div>
-							<div class="sContainer">
-								<img src="img/sponsor2.png" />
-							</div>
-							<div class="sContainer">
-								<img src="img/sponsor3.png" />
-							</div>
-							<div class="sContainer">
-								<img src="img/sponsor4.png" />
-							</div>
-						</div>
 
 					</div>
 				</div>
@@ -99,7 +84,7 @@
 								<a href="http://vimeopro.com/createvisual/moment" target="_blank">
 									<div class="vOverlay">
 										<h3>Moment</h3>
-										<p>Moment by definition is a very brief period of time</p>
+										<p>By definition is a very brief period of time</p>
 									</div>
 
 									<img src="img/vidCal/moment_ep1.png" />
@@ -118,7 +103,7 @@
 								<a href="http://vimeopro.com/createvisual/redux" target="_blank">
 									<div class="vOverlay">
 										<h3>Redux</h3>
-										<p>Redux will rerelease old icelandic skate video classics</p>
+										<p>Old icelandic skate video classics rereleased</p>
 									</div>
 									<img src="img/vidCal/redux_ep1.png" />
 								</a>
@@ -127,7 +112,7 @@
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
 										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<p>Icelandic Street Art and Graffiti</p>
 									</div>
 									<img src="img/vidCal/piece_ep1.png" />
 								</a>
@@ -146,7 +131,7 @@
 								<a href="">
 									<div class="vOverlay">
 										<h3>Happy festival</h3>
-										<p>An illegal four day festival<br />Episode 1 release date july 11</p>
+										<p>Underground four day festival<br /> Episode 1 release date july 11</p>
 									</div>
 									<img src="img/vidCal/happy_ep1.png" />
 									<div class="n n11"></div>
@@ -155,8 +140,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Ding Dong</h3>
+										<p>Icelandic sketch show<br />Episode 1 release date july 14</p>
 									</div>
 									<img src="img/vidCal/dingdong_ep1.png" />
 									<div class="n n14"></div>
@@ -165,8 +150,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Echo</h3>
+										<p>A journey back in time<br /> Episode 1 release date july 16</p>
 									</div>
 									<img src="img/vidCal/Echo_ep1.png" />
 									<div class="n n16"></div>
@@ -176,8 +161,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Local</h3>
+										<p>Insight into local produce<br />Episode 1 release date july 18</p>
 									</div>
 									<img src="img/vidCal/local_ep1.png" />
 									<div class="n n18"></div>
@@ -186,8 +171,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Venture</h3>
+										<p>Rapper's delight<br />Episode 1 release date july 21</p>
 									</div>
 									<img src="img/vidCal/venture_ep1.png" />
 									<div class="n n21"></div>
@@ -196,8 +181,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Aftermath</h3>
+										<p>A show about skateboarders<br />Episode 1 release date july 23</p>
 									</div>
 									<img src="img/vidCal/aftermath_ep1.png" />
 									<div class="n n23"></div>
@@ -206,8 +191,8 @@
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>I'm Green</h3>
+										<p>Musicians and green-screen<br />Episode 1 release date july 25</p>
 									</div>
 									<img src="img/vidCal/green_ep1.png" />
 									<div class="n n25"></div>
@@ -225,18 +210,95 @@
 					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
 					data-bottom-top="background-position: 50% 100px;"
-					data-anchor-target="#slide-3"
-				>
+					data-anchor-target="#slide-3">
 					<div class="hsContainer">
 						<div class="hsContent"
 							data--50-bottom="opacity: 0;"
 							data--200-bottom="opacity: 1;"
 							data-center="opacity: 1"
 							data-200-top="opacity: 0"
-							data-anchor-target="#slide-3 h2"
-						>
-							<h2></h2>
+							data-anchor-target="#slide-3 h2">
+						
 						</div>
+						<div id="vidBox">
+							<div class="vContainer">
+								<a href="" target="_blank">
+									<div class="vOverlay">
+										<h3>In storage</h3>
+										<p>Unreleased footage now available</p>
+									</div>
+									<img src="img/p3/thumb_1_about.png" />
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="">
+									<div class="vOverlay">
+										<h3>Happy festival</h3>
+										<p>An illegal four day festival<br />Episode 1 release date july 11</p>
+									</div>
+									<img src="img/p3/thumb_2_tumblr.png" />
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/p3/thumb_3_magazine.png" />
+									<div class="n n14"></div>
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="" target="_blank">
+									<div class="vOverlay">
+										<h3>Piece by piece</h3>
+										<p>A show about Icelandic street art</p>
+									</div>
+									<img src="img/p3/thumb_4_noland.png" />
+								</a>
+							</div>
+							<div class="aboutLinkBox">
+								<div class="aboutLinkRow">
+									<a href="">Moment</a>
+									<a href="">Vision</a>
+									<a href="">Redux</a>
+								</div>
+								<div class="aboutLinkRow">
+									<a href="">Piece by Piece</a>
+									<a href="">In Storage</a>
+									<a href="">Happy</a>
+								</div>
+								<div class="aboutLinkRow">
+									<a href="">Ding Dong</a>
+									<a href="">Echo</a>
+									<a href="">Local</a>
+								</div>
+								<div class="aboutLinkRow">
+									<a href="">Venture</a>
+									<a href="">Aftermath</a>
+									<a href="">I'm Green</a>
+								</div>
+							</div>
+
+						</div>
+						
+						<div id="sponsorBox">
+							<h2>Thanks to our sponsors</h2>
+							<div class="sContainer">
+								<img src="img/sponsor1.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor2.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor3.png" />
+							</div>
+							<div class="sContainer">
+								<img src="img/sponsor4.png" />
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</section>
