--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/instorage" target="_blank">
 									<div class="vOverlay">
 										<h3>In storage</h3>
 										<p>Unreleased footage now available</p>
@@ -128,7 +128,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="">
+								<a href="http://vimeopro.com/createvisual/happy" target="_blank">
 									<div class="vOverlay">
 										<h3>Happy festival</h3>
 										<p>Underground four day festival<br /> Episode 1 release date july 11</p>
@@ -138,7 +138,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/dingdong" target="_blank">
 									<div class="vOverlay">
 										<h3>Ding Dong</h3>
 										<p>Icelandic sketch show<br />Episode 1 release date july 14</p>
@@ -148,7 +148,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/echo" target="_blank">
 									<div class="vOverlay">
 										<h3>Echo</h3>
 										<p>A journey back in time<br /> Episode 1 release date july 16</p>
@@ -159,7 +159,7 @@
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/local" target="_blank">
 									<div class="vOverlay">
 										<h3>Local</h3>
 										<p>Insight into local produce<br />Episode 1 release date july 18</p>
@@ -169,7 +169,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/venture" target="_blank">
 									<div class="vOverlay">
 										<h3>Venture</h3>
 										<p>Rapper's delight<br />Episode 1 release date july 21</p>
@@ -179,7 +179,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/aftermath" target="_blank">
 									<div class="vOverlay">
 										<h3>Aftermath</h3>
 										<p>A show about skateboarders<br />Episode 1 release date july 23</p>
@@ -189,7 +189,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://vimeopro.com/createvisual/green" target="_blank">
 									<div class="vOverlay">
 										<h3>I'm Green</h3>
 										<p>Musicians and green-screen<br />Episode 1 release date july 25</p>
