--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
         <style type="text/css">
 			body {
-				font-family: 'Open Sans', sans-serif;
+				font-family: 'Fjalla One', sans-serif;
 			}
 		</style>
+		<link href='http://fonts.googleapis.com/css?family=Anton|Fjalla+One' rel='stylesheet' type='text/css'>
     </head>
     <body class="loading">
         <!--[if lt IE 7]>
@@ -44,9 +45,9 @@
 							data-center="bottom: 200px; opacity: 1"
 							data-top="bottom: 1200px; opacity: 1"
 							data-anchor-target="#slide-1 h2" >
-							<div class="centerContent">
+							<div class="welcomeText">
 								<h2>Welcome to Create Visual</h2>
-								<p id="welcome">
+								<p>
 									Create Visual takes you on a visual journey into Iceland 
 									subculture. The videos found on this website are free and 
 									include various individuals and activities related to the 
@@ -76,7 +77,6 @@
 							data--100-bottom="opacity: 0;"
 							data-anchor-target="#slide-2"
 						>
-							<h2></h2>
 						</div>
 						<div id="vidBox">
 							<h2>Create Video Calendar</h2>
