--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,800|Open+Sans+Condensed:300,300italic' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
         <style type="text/css">
 			body {
-				font-family: 'Fjalla One', sans-serif;
+				font-family: 'Open Sans Condensed', sans-serif;
 			}
 		</style>
-		<link href='http://fonts.googleapis.com/css?family=Anton|Fjalla+One' rel='stylesheet' type='text/css'>
     </head>
     <body class="loading">
         <!--[if lt IE 7]>
