--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						>
 						</div>
 						<div id="vidBox">
-							<h2>Create Video Calendar</h2>
+							<h2>CREATE VIDEO MAGAZINE</h2>
 							<div class="vContainer">
 								<a href="http://vimeopro.com/createvisual/moment" target="_blank">
 									<div class="vOverlay">
