Uppfæra vid linka

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<div id="vidBox">
 							<h2>CREATE VIDEO MAGAZINE</h2>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/moment" target="_blank">
+								<a href="http://moment.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Moment</h3>
 										<p>By definition is a very brief period of time</p>
@@ -91,7 +91,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/vision" target="_blank">
+								<a href="http://vision.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Vision</h3>
 										<p>Artists performing in their studios</p>
@@ -100,7 +100,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/redux" target="_blank">
+								<a href="http://redux.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Redux</h3>
 										<p>Old icelandic skate video classics rereleased</p>
@@ -109,7 +109,7 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/piece" target="_blank">
+								<a href="http://piece.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Piece by piece</h3>
 										<p>Icelandic Street Art and Graffiti</p>
@@ -119,7 +119,7 @@
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/instorage" target="_blank">
+								<a href="http://instorage.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>In storage</h3>
 										<p>Unreleased footage now available</p>
@@ -128,74 +128,74 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/happy" target="_blank">
+								<a href="http://happy.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Happy festival</h3>
-										<p>Underground four day festival<br /> Episode 1 release date july 11</p>
+										<p>Underground four day festival<br /> Episode 1 release date july 14</p>
 									</div>
 									<img src="img/vidCal/happy_ep1.png" />
-									<div class="n n11"></div>
-								</a>
-							</div>
-							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/dingdong" target="_blank">
-									<div class="vOverlay">
-										<h3>Ding Dong</h3>
-										<p>Icelandic sketch show<br />Episode 1 release date july 14</p>
-									</div>
-									<img src="img/vidCal/dingdong_ep1.png" />
 									<div class="n n14"></div>
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/echo" target="_blank">
+								<a href="http://dingdong.createvisual.net" target="_blank">
+									<div class="vOverlay">
+										<h3>Ding Dong</h3>
+										<p>Icelandic sketch show<br />Episode 1 release date july 16</p>
+									</div>
+									<img src="img/vidCal/dingdong_ep1.png" />
+									<div class="n n16"></div>
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="http://echo.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Echo</h3>
-										<p>A journey back in time<br /> Episode 1 release date july 16</p>
+										<p>A journey back in time<br /> Episode 1 release date july 18</p>
 									</div>
 									<img src="img/vidCal/Echo_ep1.png" />
-									<div class="n n16"></div>
+									<div class="n n18"></div>
 								</a>
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/local" target="_blank">
+								<a href="http://local.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Local</h3>
-										<p>Insight into local produce<br />Episode 1 release date july 18</p>
+										<p>Insight into local produce<br />Episode 1 release date july 21</p>
 									</div>
 									<img src="img/vidCal/local_ep1.png" />
-									<div class="n n18"></div>
-								</a>
-							</div>
-							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/venture" target="_blank">
-									<div class="vOverlay">
-										<h3>Venture</h3>
-										<p>Rapper's delight<br />Episode 1 release date july 21</p>
-									</div>
-									<img src="img/vidCal/venture_ep1.png" />
 									<div class="n n21"></div>
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/aftermath" target="_blank">
+								<a href="http://venture.createvisual.net" target="_blank">
 									<div class="vOverlay">
-										<h3>Aftermath</h3>
-										<p>A show about skateboarders<br />Episode 1 release date july 23</p>
+										<h3>Venture</h3>
+										<p>Rapper's delight<br />Episode 1 release date july 23</p>
 									</div>
-									<img src="img/vidCal/aftermath_ep1.png" />
+									<img src="img/vidCal/venture_ep1.png" />
 									<div class="n n23"></div>
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://vimeopro.com/createvisual/green" target="_blank">
+								<a href="http://aftermath.createvisual.net" target="_blank">
+									<div class="vOverlay">
+										<h3>Aftermath</h3>
+										<p>A show about skateboarders<br />Episode 1 release date july 25</p>
+									</div>
+									<img src="img/vidCal/aftermath_ep1.png" />
+									<div class="n n25"></div>
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="http://green.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>I'm Green</h3>
-										<p>Musicians and green-screen<br />Episode 1 release date july 25</p>
+										<p>Musicians and green-screen<br />Episode 1 release date july 28</p>
 									</div>
 									<img src="img/vidCal/green_ep1.png" />
-									<div class="n n25"></div>
+									<div class="n n28"></div>
 								</a>
 							</div>
 
@@ -246,7 +246,7 @@
 										<p>A show about Icelandic street art</p>
 									</div>
 									<img src="img/p3/thumb_3_magazine.png" />
-									<div class="n n14"></div>
+									<div class="n n30"></div>
 								</a>
 							</div>
 							<div class="vContainer">
