--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							data-anchor-target="#slide-2"
 						>
 						</div>
-						<div id="vidBox">
+						<div class="vidBox">
 							<h2>CREATE VIDEO MAGAZINE</h2>
 							<div class="vContainer">
 								<a href="http://moment.createvisual.net" target="_blank">
@@ -212,15 +212,8 @@
 					data-bottom-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-3">
 					<div class="hsContainer">
-						<div class="hsContent"
-							data--50-bottom="opacity: 0;"
-							data--200-bottom="opacity: 1;"
-							data-center="opacity: 1"
-							data-200-top="opacity: 0"
-							data-anchor-target="#slide-3 h2">
-						
-						</div>
-						<div id="vidBox">
+
+						<div class="vidBox">
 							<div class="vContainer">
 								<a href="" target="_blank">
 									<div class="vOverlay">
@@ -258,44 +251,46 @@
 									<img src="img/p3/thumb_4_noland.png" />
 								</a>
 							</div>
-							<div class="aboutLinkBox">
-								<div class="aboutLinkRow">
-									<a href="">Moment</a>
-									<a href="">Vision</a>
-									<a href="">Redux</a>
-								</div>
-								<div class="aboutLinkRow">
-									<a href="">Piece by Piece</a>
-									<a href="">In Storage</a>
-									<a href="">Happy</a>
-								</div>
-								<div class="aboutLinkRow">
-									<a href="">Ding Dong</a>
-									<a href="">Echo</a>
-									<a href="">Local</a>
-								</div>
-								<div class="aboutLinkRow">
-									<a href="">Venture</a>
-									<a href="">Aftermath</a>
-									<a href="">I'm Green</a>
-								</div>
+						<div class="aboutLinkBox">
+							<div class="aboutLinkRow">
+								<a href="http://about.me/createvisualmoment">Moment</a>
+								<a href="http://about.me/createvisualvision">Vision</a>
+								<a href="http://about.me/createvisualredux">Redux</a>
 							</div>
+							<div class="aboutLinkRow">
+								<a href="http://about.me/createvisualpiece">Piece by Piece</a>
+								<a href="http://about.me/createvisualinstorage">In Storage</a>
+								<a href="http://about.me/createvisualhappy">Happy</a>
+							</div>
+							<div class="aboutLinkRow">
+								<a href="http://about.me/createvisualdingdong">Ding Dong</a>
+								<a href="http://about.me/createvisualecho">Echo</a>
+								<a href="http://about.me/createvisuallocal">Local</a>
+							</div>
+							<div class="aboutLinkRow">
+								<a href="http://about.me/createvisualventure">Venture</a>
+								<a href="http://about.me/createvisualaftermath">Aftermath</a>
+								<a href="http://about.me/createvisualgreen">I'm Green</a>
+							</div>
+						</div>
 
 						</div>
+
+
 						
 						<div id="sponsorBox">
 							<h2>Thanks to our sponsors</h2>
 							<div class="sContainer">
-								<img src="img/sponsor1.png" />
+								<a href=""><img src="img/sponsor1.png" /></a>
 							</div>
 							<div class="sContainer">
-								<img src="img/sponsor2.png" />
+								<a href=""><img src="img/sponsor2.png" /></a>
 							</div>
 							<div class="sContainer">
-								<img src="img/sponsor3.png" />
+								<a href=""><img src="img/sponsor3.png" /></a>
 							</div>
 							<div class="sContainer">
-								<img src="img/sponsor4.png" />
+								<a href=""><img src="img/sponsor4.png" /></a>	
 							</div>
 						</div>
 
