--- a/index.html
+++ b/index.html
@@ -215,38 +215,36 @@
 
 						<div class="vidBox">
 							<div class="vContainer">
-								<a href="" target="_blank">
+								<a href="http://about.me/create_visual">
 									<div class="vOverlay">
-										<h3>In storage</h3>
-										<p>Unreleased footage now available</p>
+										<h3>About</h3>
+										<p>About about Create visual</p>
 									</div>
 									<img src="img/p3/thumb_1_about.png" />
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="">
+								<a href="http://createvisualiceland.tumblr.com/">
 									<div class="vOverlay">
-										<h3>Happy festival</h3>
-										<p>An illegal four day festival<br />Episode 1 release date july 11</p>
+										<h3>Tumblr</h3>
+										<p>Create visuals evil twin page</p>
 									</div>
 									<img src="img/p3/thumb_2_tumblr.png" />
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="" target="_blank">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Create Magazine</h3>
+										<p>Issue 1 release date july 30</p>
 									</div>
 									<img src="img/p3/thumb_3_magazine.png" />
 									<div class="n n30"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="" target="_blank">
+								<a href="https://www.facebook.com/nolandrvk">
 									<div class="vOverlay">
-										<h3>Piece by piece</h3>
-										<p>A show about Icelandic street art</p>
+										<h3>Noland</h3>
+										<p>Mecca of Iceland streetwear</p>
 									</div>
 									<img src="img/p3/thumb_4_noland.png" />
 								</a>
