--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		</style>
     </head>
     <body class="loading">
-        <!--[if lt IE 7]>
+		<div class="logo"></div>
+		<div id="scrollr-body">
+		<!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        	
@@ -40,7 +42,6 @@
 					data-anchor-target="#slide-1" >
 					
 					<div class="hsContainer">
-						<div class="logo"></div>
 						<div class="hsContent"
 							data-center="bottom: 200px; opacity: 1"
 							data-top="bottom: 1200px; opacity: 1"
@@ -297,6 +298,8 @@
 			</section>
 
 		</main>
+		
+		</div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
