--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 		</style>
     </head>
     <body class="loading">
-		<div id="scrollr-body">
 		<!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -33,6 +32,8 @@
 	       	<img src="img/Page_3.png">
        	</div>
        	
+		<div class="logo"></div>
+		
        	<main>
 			<section id="slide-1" class="homeSlide">
 				<div class="bcg"
