--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 								<a href="http://about.me/create_visual" target="_blank">
 									<div class="vOverlay">
 										<h3>About</h3>
-										<p>About about Create visual</p>
+										<p>About Create visual</p>
 									</div>
 									<img src="img/p3/thumb_1_about.png" />
 								</a>
@@ -281,7 +281,7 @@
 							<div class="vidBox">
 								<h2>Thanks to our sponsors</h2>
 								<div class="vContainer">
-									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10201887862987190.1073741836.1502096098&type=3" target="_blank">
+									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10202293676212267.1073741839.1502096098&type=3" target="_blank">
 										<div class="vOverlay">
 											<h3>&nbsp;</h3>
 											<p>AVAILABLE IN NOLAND</p>
@@ -299,19 +299,19 @@
 									</a>
 								</div>
 								<div class="vContainer">
-									<a href="http://reyka.com/" target="_blank">
+									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10201887862987190.1073741836.1502096098&type=3" target="_blank">
 										<div class="vOverlay">
 											<h3>&nbsp;</h3>
-											<p>HAND CRAFTED IN ICELAND</p>
+											<p>AVAILABLE IN NOLAND</p>
 										</div>								
 										<img src="img/sponsor3.png" />
 									</a>
 								</div>
 								<div class="vContainer">
-									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10202293676212267.1073741839.1502096098&type=3" target="_blank">
+									<a href="http://reyka.com/" target="_blank">
 										<div class="vOverlay">
 											<h3>&nbsp;</h3>
-											<p>AVAILABLE IN NOLAND</p>
+											<p>HAND CRAFTED IN ICELAND</p>
 										</div>
 										<img src="img/sponsor4.png" />
 									</a>	
@@ -330,6 +330,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="js/imagesloaded.js"></script>
+		<script src="js/enquire.min.js"></script>
         <script src="js/skrollr.js"></script>
         <script src="js/main.js"></script>
 
