--- a/index.html
+++ b/index.html
@@ -129,75 +129,61 @@
 								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://happy.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Happy festival</h3>
 										<p>Underground four day festival<br /> Episode 1 release date july 14</p>
 									</div>
 									<img src="img/vidCal/happy_ep1.png" />
 									<div class="n n14"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://dingdong.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Ding Dong</h3>
 										<p>Icelandic sketch show<br />Episode 1 release date july 16</p>
 									</div>
 									<img src="img/vidCal/dingdong_ep1.png" />
 									<div class="n n16"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://echo.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Echo</h3>
 										<p>A journey back in time<br /> Episode 1 release date july 18</p>
 									</div>
 									<img src="img/vidCal/Echo_ep1.png" />
 									<div class="n n18"></div>
-								</a>
 							</div>
 							<!-- -->
 							<div class="vContainer">
-								<a href="http://local.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Local</h3>
 										<p>Insight into local produce<br />Episode 1 release date july 21</p>
 									</div>
 									<img src="img/vidCal/local_ep1.png" />
 									<div class="n n21"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://venture.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Venture</h3>
 										<p>Rapper's delight<br />Episode 1 release date july 23</p>
 									</div>
 									<img src="img/vidCal/venture_ep1.png" />
 									<div class="n n23"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://aftermath.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Aftermath</h3>
 										<p>A show about skateboarders<br />Episode 1 release date july 25</p>
 									</div>
 									<img src="img/vidCal/aftermath_ep1.png" />
 									<div class="n n25"></div>
-								</a>
 							</div>
 							<div class="vContainer">
-								<a href="http://green.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>I'm Green</h3>
 										<p>Musicians and green-screen<br />Episode 1 release date july 28</p>
 									</div>
 									<img src="img/vidCal/green_ep1.png" />
 									<div class="n n28"></div>
-								</a>
 							</div>
 
 						</div>
@@ -281,7 +267,7 @@
 							<div class="vidBox">
 								<h2>Thanks to our sponsors</h2>
 								<div class="vContainer">
-									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10202293676212267.1073741839.1502096098&type=3" target="_blank">
+									<a href="https://www.facebook.com/pages/Noland/105246699519487?sk=info" target="_blank">
 										<div class="vOverlay">
 											<h3>&nbsp;</h3>
 											<p>AVAILABLE IN NOLAND</p>
@@ -299,7 +285,7 @@
 									</a>
 								</div>
 								<div class="vContainer">
-									<a href="https://www.facebook.com/nolandrvk/media_set?set=a.10201887862987190.1073741836.1502096098&type=3" target="_blank">
+									<a href="https://www.facebook.com/pages/Noland/105246699519487?sk=info" target="_blank">
 										<div class="vOverlay">
 											<h3>&nbsp;</h3>
 											<p>AVAILABLE IN NOLAND</p>
