Breytingar frá Kjarra

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<a href="http://redux.createvisual.net" target="_blank">
 									<div class="vOverlay">
 										<h3>Redux</h3>
-										<p>Old icelandic skate video classics rereleased</p>
+										<p>Old icelandic skate video part classic's remixed and rereleased</p>
 									</div>
 									<img src="img/vidCal/redux_ep1.png" />
 								</a>
@@ -174,18 +174,18 @@
 							</div>
 							<div class="vContainer">
 									<div class="vOverlay">
-										<h3>Aftermath</h3>
-										<p>A show about skateboarders<br />Episode 1 release date july 25</p>
+										<h3>Icelandic skatemovies</h3>
+										<p>Icelandic skatemovies in one place<br />Episode 1 release date july 28</p>
 									</div>
-									<img src="img/vidCal/aftermath_ep1.png" />
+									<img src="img/vidCal/skatemovies.png" />
 									<div class="n n25"></div>
 							</div>
 							<div class="vContainer">
 									<div class="vOverlay">
-										<h3>I'm Green</h3>
-										<p>Musicians and green-screen<br />Episode 1 release date july 28</p>
+										<h3>Aftermath</h3>
+										<p>A show about skateboarders<br />Episode 1 release date july 25</p>
 									</div>
-									<img src="img/vidCal/green_ep1.png" />
+									<img src="img/vidCal/aftermath_ep1.png" />
 									<div class="n n28"></div>
 							</div>
 
