--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							<div class="vContainer">
 									<div class="vOverlay">
 										<h3>Icelandic skatemovies</h3>
-										<p>Icelandic skatemovies in one place<br />Episode 1 release date july 28</p>
+										<p>Icelandic skatemovies in one place<br />Episode 1 release date july 25</p>
 									</div>
 									<img src="img/vidCal/skatemovies.png" />
 									<div class="n n25"></div>
@@ -183,7 +183,7 @@
 							<div class="vContainer">
 									<div class="vOverlay">
 										<h3>Aftermath</h3>
-										<p>A show about skateboarders<br />Episode 1 release date july 25</p>
+										<p>A show about skateboarders<br />Episode 1 release date july 28</p>
 									</div>
 									<img src="img/vidCal/aftermath_ep1.png" />
 									<div class="n n28"></div>
@@ -259,7 +259,7 @@
 								<div class="aboutLinkRow">
 									<a href="http://about.me/createvisualventure" target="_blank" class="masterTooltip" title="Venture<br /> Rapper's delight">Venture</a>
 									<a href="http://about.me/createvisualaftermath" target="_blank" class="masterTooltip" title="About Aftermath<br /> A show about skateboarders">Aftermath</a>
-									<a href="http://about.me/createvisualgreen" target="_blank" class="masterTooltip tight" title="About Icelandic skatemovies<br /> Icelandic skatemovies in one place">Icelandic skatemovies</a>
+									<a href="http://about.me/icelandicskatemovies" target="_blank" class="masterTooltip tight" title="About Icelandic skatemovies<br /> Icelandic skatemovies in one place">Icelandic skatemovies</a>
 								</div>
 							</div>
 							
