--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 							<div class="aboutLinkBox">
 								<div class="aboutLinkRow">
-									<a href="http://about.me/createvisualmoment" target="_blank" class="masterTooltip" title="About Moment<br /> by definition is a very brief period of time.">Moment</a>
+									<a href="http://about.me/createvisualmoment" target="_blank" class="masterTooltip" title="About Moment<br /> A brief period of time.">Moment</a>
 									<a href="http://about.me/createvisualvision" target="_blank" class="masterTooltip" title="About Vision<br /> Artists performing in their studios">Vision</a>
 									<a href="http://about.me/createvisualredux" target="_blank" class="masterTooltip" title="About Redux<br /> Old icelandic skate video part classic's remixed and rereleased">Redux</a>
 								</div>
